<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splashBackground"
    tools:context="fragment.ForgotPasswordInputFragment">


    <ImageView
        android:id="@+id/imgForgotPassword"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/appicon"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="13dp"
        android:text="@string/enter_your_registered_mobile_number_and_email_below"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:padding="8dp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:inputType="phone"
        android:hint="@string/mobile_number"
        android:background="#ffffff"
        android:textSize="20sp"
        android:padding="4dp"
        />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:background="#ffffff"
        android:textSize="20sp"
        android:padding="4dp"
        />
    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/next"
        android:backgroundTint="@color/button"
        android:textSize="20sp"
        android:padding="4dp"
        android:textColor="#000000"
        android:layout_gravity="center"
        />


</LinearLayout>